<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="add_note">add note</string>

    <string name="hint_title">Title...</string>
    <string name="hint_subtitle">Subtitle...</string>
    <string name="hint_description">Description...</string>
    <string name="hint_date">Date...</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="date_picker">datePicker</string>
    <string name="clear_all">clear all</string>

</resources>