<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_title"
        android:inputType="textAutoComplete"
        android:layout_margin="16dp"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/edit_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_subtitle"
        android:inputType="textAutoComplete"
        android:layout_margin="16dp"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine|textCapSentences"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">
        <Button
            android:id="@+id/button_save"
            android:layout_width="90dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/button_save"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="90dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/button_cancel"
            android:layout_margin="16dp" />
        </LinearLayout>

</LinearLayout>

</ScrollView>